Update and rename endex.html to index.html

--- a/index.html
+++ b/index.html
@@ -148,14 +148,15 @@
 
       <!-- CASA -->
       <div class="property casa">
-        <img src="1.avif" alt="Casa Familiar" class="main-image" onclick="openModal(['1.avif', '1.avif'])">
+        <img src="foto/1.avif" alt="Casa Familiar" class="main-image" onclick="openModal(['foto/1.avif', 'foto/1.avif'])">
         <div class="property-content">
           <h2>Casa Familiar</h2>
           <p><strong>Precio:</strong> $150,000</p>
           <p>3 habitaciones, 2 baños, jardín amplio.</p>
           <div class="thumbnail-container">
-            <div class="thumbnail" onclick="openModal(['1.avif', '1.avif'], 0)"><img src="1.avif"></div>
-            <div class="thumbnail" onclick="openModal(['2.webp', '2.webp'], 1)"><img src="2.webp"></div>
+            <div class="thumbnail" onclick="openModal(['foto/1.avif', 'foto/1.avif'], 0)"><img src="foto/1.avif"></div>
+           <div class="thumbnail" onclick="openModal(['foto/2.webp', 'foto/2.webp'], 1)"><img src="foto/2.webp"></div>
+            <div class="thumbnail" onclick="openModal(['foto/2.webp', 'foto/2.webp'], 1)"><img src="foto/2.webp"></div>
           </div>
           <button class="btn">Comprar</button>
         </div>
