--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </head>
 <body>
   <header>
-    <img src="IMG_6190.PNG" alt="Logo">
+    <img src="foto/IMG_6190.PNG" alt="Logo">
     <h1>JL INMOBILIARIA</h1>
     <p>Tu hogar ideal te espera</p>
   </header>
